# FPL-Transfer-Analysis

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  api.py  pyproject.toml  requirements.txt  utils.py
backend/scrapers/: PremierLeagueScraper.py
backend/src/: api.py  utils.py
frontend/: Dockerfile
frontend/src/: App.tsx
notebooks/: prototyping.ipynb
scraper/: Dockerfile  config.py  logger.py  requirements.txt
scraper/src/: scheduler.py
scraper/src/jobs/: test_job.py
scraper/src/scrapers/: scraper.py
