[tool.poetry]
name = "fpl-transfer-analysis"
version = "0.1.0"
description = ""
authors = ["Yohannes D. Kassaye <Kassaye85@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
soccerdata = "^1.8.4"
notebook = "^7.3.2"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
